# tgvmax-cli

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: ci.yml
tgvmax-cli/: Cargo.toml
tgvmax-cli/src/: cache.rs  cli.rs  config.rs  main.rs  output.rs
tgvmax-cli/src/commands/: mod.rs  station.rs  train.rs
tgvmax-core/: Cargo.toml
tgvmax-core/src/: client.rs  error.rs  lib.rs  models.rs  opendata.rs
