[workspace]
members = ["tgvmax-core", "tgvmax-cli"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/jvlxz/tgvmax-cli"
homepage = "https://github.com/jvlxz/tgvmax-cli"

[workspace.dependencies]
# Async runtime & HTTP
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4", features = ["derive"] }

# Terminal output
comfy-table = "7"

# Config paths
dirs = "6.0"

# Date handling
chrono = { version = "0.4", features = ["serde"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
